--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
     <div class="container">
         <center>
             <div class="button-container">
-                <a href="https://www.iteprevengo.com/" target="_blank"><img src="img.jpg" alt="mailing-ItPrevengo"></a>
+                <a href="https://www.iteprevengo.com/software/" target="_blank"><img src="img.jpg" alt="mailing-ItPrevengo"></a>
                 
                     <div class="btn">
-                        <a href="https://www.google.com/" alt="Agenda una demo" class="btn-agenda" target="_blank"><i>Agenda una demo</i></a>
+                        <a href="https://landing-comitesst.iteprevengo.com/contacto-cita.php" alt="Agenda una demo" class="btn-agenda" target="_blank"><i>Agenda una demo</i></a>
                         <a href="https://www.youtube.com/" alt="Más información"target="_blank"><i>Más información</i></a>
                     </div>
                
